# openMP

./: CMakeLists.txt  main.cpp  utility.h
